fix visibility of time tab2 results mobile

--- a/web_app/journeyplanner/static/journeyplanner/main.css
+++ b/web_app/journeyplanner/static/journeyplanner/main.css
@@ -667,7 +667,7 @@ label.dt-label {
 
       .row .datetime {
         margin-left: 4px;
-        max-width: 200px;
+        max-width: 240px;
       }
 
       .container .news {
